[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/fondos/PortadaOficial.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Portada.gd" type="Script" id=2]
[ext_resource path="res://fuentes/Fuentee.tres" type="DynamicFont" id=3]
[ext_resource path="res://Escenas/Menu/CambioEscena.tscn" type="PackedScene" id=4]
[ext_resource path="res://Recursos/BGM/Arex's Beat.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Presiona_para_seguir"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = -1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -337.5
margin_top = -50.0
margin_right = 337.5
margin_bottom = 50.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.54902, 0.537255, 0.607843, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "PRESIONA LA PANTALLA PARA SEGUIR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
anims/Presiona_para_seguir = SubResource( 1 )

[node name="CambioEscena" parent="." instance=ExtResource( 4 )]
visible = false

[node name="MusicaFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.706
[connection signal="fade_finished" from="CambioEscena" to="." method="_on_CambioEscena_fade_finished"]
